--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,12 +16,13 @@ services:
       MYSQL_USER: drupal
       MYSQL_PASSWORD: drupal
       MYSQL_HOST: mysql
-      GIT_USER: username
+      GIT_USER: ***
       GIT_PASSWORD: ***
-      FILENAME: 2016-49-18-09-49-18.sql.gz
-      UPDATE_DB: 1
+      FILENAME: dev1.sql.gz
+      UPDATE_DB: 0
+      GIT_BRANCH: stage
     volumes:
-      - /home/user/webdev/drupal-test5/htmlroot:/var/www/html
+      - /home/mosnoi/webdev/drupal-test5/htmlroot:/var/www/html
   mysql-server:
     image: mysql
     environment:
@@ -30,7 +31,7 @@ services:
       MYSQL_USER: drupal
       MYSQL_PASSWORD: drupal
     volumes:
-      - /home/user/webdev/drupal-test5/mysql:/var/lib/mysql
+      - /home/mosnoi/webdev/drupal-test5/mysql:/var/lib/mysql
     ports:
       - "3306"
   solr:
