--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -69,11 +69,11 @@ RUN a2ensite default-ssl.conf
 
 
 # Setup SSH.
-RUN echo 'root:root' | chpasswd
-RUN sed -i 's/PermitRootLogin without-password/PermitRootLogin yes/' /etc/ssh/sshd_config
-RUN mkdir /var/run/sshd && chmod 0755 /var/run/sshd
-RUN mkdir -p /root/.ssh/ && touch /root/.ssh/authorized_keys
-RUN sed 's@session\s*required\s*pam_loginuid.so@session optional pam_loginuid.so@g' -i /etc/pam.d/sshd
+#RUN echo 'root:root' | chpasswd
+#RUN sed -i 's/PermitRootLogin without-password/PermitRootLogin yes/' /etc/ssh/sshd_config
+#RUN mkdir /var/run/sshd && chmod 0755 /var/run/sshd
+#RUN mkdir -p /root/.ssh/ && touch /root/.ssh/authorized_keys
+#RUN sed 's@session\s*required\s*pam_loginuid.so@session optional pam_loginuid.so@g' -i /etc/pam.d/sshd
 
 # Setup Supervisor.
 RUN echo -e '[program:apache2]\ncommand=/bin/bash -c "source /etc/apache2/envvars && exec /usr/sbin/apache2 -DFOREGROUND"\nautorestart=true\n\n' >> /etc/supervisor/supervisord.conf
